# kivy_service_osc

./: Makefile  README.md  buildozer.spec  main.py  pyproject.toml
.circleci/: config.yml
service/: main.py
src/: main.py  service.py
